Name: testpack
Version: 1.0.0
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2004-2009 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
homepage: http://software.complete.org/testpack
Category: Testing
synopsis: Large utility library
Description:  MissingH is a library of all sorts of utility functions for
 Haskell programmers.  It is written in pure Haskell and thus should
 be extremely portable and easy to use.
Stability: Beta
Build-Type: Simple
Cabal-Version: >=1.2

Flag splitBase
  description: Choose the new smaller, split-up base package.

Library
 Hs-Source-Dirs: src
 Exposed-Modules:
  Test.HUnit.Utils

 Extensions: ExistentialQuantification, OverlappingInstances,
   UndecidableInstances, CPP, Rank2Types,
   MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
   PatternSignatures

 Build-Depends: base,
               haskell98, mtl, HUnit, 
               QuickCheck >= 1.0 && < 2.0,
 If flag(splitBase)
   Build-Depends: base >= 3, containers
 Else
   Build-Depends: base < 3
